refactoring, changed folder path

--- a/AATelegramBotMusic/appsettings.json
+++ b/AATelegramBotMusic/appsettings.json
@@ -6,5 +6,5 @@
     "Password": "Your Password"
   },
   "FtpRemoteFilePath": "/addons/amxmodx/configs/Music.ini",
-  "MusicPath": "sound/TgMusic/"
+  "MusicPath": "/sound/TgMusic/"
 }
