added new music converter for linux

--- a/AATelegramBotMusic/AATelegramBotMusic.csproj
+++ b/AATelegramBotMusic/AATelegramBotMusic.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FFMpegCore" Version="5.1.0" />
     <PackageReference Include="FluentFTP" Version="50.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
