refactoring, making it possible to add to a telegram group

--- a/AATelegramBotMusic/appsettings.json
+++ b/AATelegramBotMusic/appsettings.json
@@ -6,5 +6,11 @@
     "Password": "Your Password"
   },
   "FtpRemoteFilePath": "/addons/amxmodx/configs/Music.ini",
-  "MusicPath": "/sound/TgMusic/"
+  "MusicPath": "/sound/TgMusic/",
+  "TargetChatId": "ChatIdChannel",
+  "Admins": {
+    "admin": [
+      "adminTgUserName"
+    ]
+  }
 }
