added features approved and upload music for telegram channel

--- a/AATelegramBotMusic/appsettings.json
+++ b/AATelegramBotMusic/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Your connection"
+  },
   "TelegramBotToken": "Your Token",
   "FtpConnection": {
     "Host": "Your Host",
