--- a/AATelegramBotMusic/AATelegramBotMusic.csproj
+++ b/AATelegramBotMusic/AATelegramBotMusic.csproj
@@ -20,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AATelegramBotMusic.DB\AATelegramBotMusic.DB.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
