same fixes, added work bot only same topic

--- a/AATelegramBotMusic/appsettings.json
+++ b/AATelegramBotMusic/appsettings.json
@@ -11,9 +11,10 @@
   "FtpRemoteFilePath": "/addons/amxmodx/configs/Music.ini",
   "MusicPath": "/sound/TgMusic/",
   "TargetChatId": "ChatIdChannel",
+  "TargetThreadId": "TopicThreadId",
   "Admins": {
     "admin": [
-      "adminTgUserName"
+      "@adminTgUserName"
     ]
   }
 }
