--- a/AATelegramBotMusic/appsettings.json
+++ b/AATelegramBotMusic/appsettings.json
@@ -14,7 +14,7 @@
   "TargetThreadId": "TopicThreadId",
   "Admins": {
     "admin": [
-      "@adminTgUserName"
+      "adminTgUserName"
     ]
   }
 }
