--- a/AATelegramBotMusic/appsettings.json
+++ b/AATelegramBotMusic/appsettings.json
@@ -14,7 +14,8 @@
   "TargetThreadId": "TopicThreadId",
   "Admins": {
     "admin": [
-      "adminTgUserName"
+      "adminTgUserName",
+      "adminTgUserName2"
     ]
   },
   "IsWelcomeMessage": true
