added feature for mysql

--- a/AATelegramBotMusic/appsettings.json
+++ b/AATelegramBotMusic/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Your connection"
+    "DefaultConnection": "server=localhost;database=library;user=user;password=password"
   },
   "TelegramBotToken": "Your Token",
   "FtpConnection": {
